--- a/Quickstart_MedicalZoo.ipynb
+++ b/Quickstart_MedicalZoo.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Quickstart MedicalZoo.ipynb",
-      "provenance": [],
-      "mount_file_id": "1wJpLzfKOTHYXpQIOxVjB6d6U-VWnAqWA",
-      "authorship_tag": "ABX9TyOTkj84KVvcdwCTCKq3zu8h",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/black0017/MedicalZooPytorch/blob/master/Quickstart_MedicalZoo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,35 +12,30 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "0EJ77EgqRPgf",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
       "execution_count": 0,
-      "outputs": []
+      "metadata": {
+        "colab": {},
+        "colab_type": "code",
+        "id": "0EJ77EgqRPgf"
+      },
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
-        "id": "42NSNnzBRHeJ",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
+        "colab_type": "code",
+        "id": "42NSNnzBRHeJ",
         "outputId": "bb620582-20a4-4787-ac9d-8f341ef35050"
       },
-      "source": [
-        "!git clone https://github.com/black0017/MedicalZooPytorch\n",
-        "!pip install -r ./MedicalZooPytorch/installation/requirements.txt"
-      ],
-      "execution_count": 1,
       "outputs": [
         {
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "Cloning into 'MedicalZooPytorch'...\n",
@@ -133,16 +112,19 @@
             "Successfully built torchnet visdom torchfile\n",
             "Installing collected packages: jsonpointer, jsonpatch, torchfile, websocket-client, visdom, torchnet, torchsummaryX\n",
             "Successfully installed jsonpatch-1.25 jsonpointer-2.0 torchfile-0.1.0 torchnet-0.0.4 torchsummaryX-1.3.0 visdom-0.1.8.9 websocket-client-0.57.0\n"
-          ],
-          "name": "stdout"
+          ]
         }
+      ],
+      "source": [
+        "# !git clone https://github.com/black0017/MedicalZooPytorch\n",
+        "!pip install -r ./MedicalZooPytorch/installation/requirements.txt"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ZmsDH1FIXfcB",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "ZmsDH1FIXfcB"
       },
       "source": [
         "## Extract datasets\n",
@@ -154,22 +136,22 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 0,
       "metadata": {
-        "id": "0YmYHcJ4Yr-J",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "0YmYHcJ4Yr-J"
       },
+      "outputs": [],
       "source": [
         "%cp -r '/content/drive/My Drive/MEDICAL/iseg_2017/iSeg-2017-Training/' '/content/MedicalZooPytorch/datasets/iseg_2017/'\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ir_bFiOgX_CI",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "ir_bFiOgX_CI"
       },
       "source": [
         "## Copy train file outside of test\n",
@@ -178,35 +160,35 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
       "metadata": {
-        "id": "MSZs1P07RVpn",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
+        "colab_type": "code",
+        "id": "MSZs1P07RVpn",
         "outputId": "5bc7a08f-4a4f-4c1d-d9a4-7b0b337d080b"
       },
-      "source": [
-        "%cd /content/MedicalZooPytorch\n",
-        "%cp /content/MedicalZooPytorch/tests/train_with_trainer_class.py /content/MedicalZooPytorch/train_with_trainer_class.py \n"
-      ],
-      "execution_count": 3,
       "outputs": [
         {
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "/content/MedicalZooPytorch\n"
-          ],
-          "name": "stdout"
+          ]
         }
+      ],
+      "source": [
+        "%cd /content/MedicalZooPytorch\n",
+        "%cp /content/MedicalZooPytorch/tests/train_with_trainer_class.py /content/MedicalZooPytorch/train_with_trainer_class.py \n"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "GlgRjMq_iCxY",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "GlgRjMq_iCxY"
       },
       "source": [
         "# Start training"
@@ -214,21 +196,19 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 0,
       "metadata": {
-        "id": "4HpkFJaDiDEN",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 318
         },
+        "colab_type": "code",
+        "id": "4HpkFJaDiDEN",
         "outputId": "105ab359-9932-43ad-8d13-1551bd63976d"
       },
-      "source": [
-        "! python train_with_trainer_class.py"
-      ],
-      "execution_count": 0,
       "outputs": [
         {
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "SELECT subject with ID 1 for Validation\n",
@@ -246,10 +226,29 @@
             "Model transferred in GPU.....\n",
             "2020-04-24 09:35:15.252311: I tensorflow/stream_executor/platform/default/dso_loader.cc:44] Successfully opened dynamic library libcudart.so.10.1\n",
             "START TRAINING...\n"
-          ],
-          "name": "stdout"
+          ]
         }
+      ],
+      "source": [
+        "! python train_with_trainer_class.py"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "authorship_tag": "ABX9TyOTkj84KVvcdwCTCKq3zu8h",
+      "include_colab_link": true,
+      "mount_file_id": "1wJpLzfKOTHYXpQIOxVjB6d6U-VWnAqWA",
+      "name": "Quickstart MedicalZoo.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {}
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
